hard-gists/1320970/run.log
=== Docker Run Log for 1320970 ===
Started at: Mi 29. Okt 12:06:58 CET 2025

[2025-10-29 12:06:59] START: Running container for 1320970
[2025-10-29 12:06:59] SUCCESS: Container 28911d3354e9ddd82e95b48e06487ebfeaeeadf928cc295978b7e21869d65d9c started for 1320970
=== Container logs for 1320970 ===
  File "/snippet.py", line 52
    except dbus.exceptions.DBusException, e:
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 1320970 ===
[2025-10-29 12:07:01] INFO: Container 28911d3354e9ddd82e95b48e06487ebfeaeeadf928cc295978b7e21869d65d9c has stopped
